# litlua

./: CMakeLists.txt  README.md
build_linux/: clang_build.sh  gcc_build.sh
litlua/: CMakeLists.txt  litapi.h  litlua.h  littraits.h  littype.h
lua-5.3.3/src/: lua.h
test/: CMakeLists.txt  class.cpp  lua_return.cpp  main.cpp  static_function.cpp  table.cpp
