CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(litlua)

ENABLE_TESTING()
SET(BUILD_TESTING ON)


IF(NOT MSVC_VERSION)
  SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fexceptions -Wno-unused-local-typedefs -ffunction-sections -fdata-sections")
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -fexceptions")
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-unused-local-typedefs -Wreorder -ffunction-sections -fdata-sections")
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-omit-frame-pointer")
  SET(LINK_LIBS ${LINK_LIBS} litlua dl)

ELSE(NOT MSVC_VERSION)
#MSVC编译选项
  SET(CMAKE_CONFIGURATION_TYPES "Debug;Release" )
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W3 /MP  /bigobj /wd4496 /wd4267 /wd4244 /Zi /std:c++latest")
  SET(CMAKE_CXX_FLAGS_DEBUG "-DDEBUG /MTd /Od")
  SET(CMAKE_CXX_FLAGS_RELEASE "-DNDEBUG /MT /DEBUG:FASTLINK")
  SET(CMAKE_C_FLAGS_DEBUG "-DDEBUG /MTd")
  SET(CMAKE_C_FLAGS_RELEASE "-DNDEBUG /MT /DEBUG:FASTLINK ")
#预定义宏
  ADD_DEFINiTIONS(-D_CRT_SECURE_NO_WARNINGS -D_SCL_SECURE_NO_WARNINGS -D_CRT_SECURE_NO_DEPRECATE -D_CRT_NONSTDC_NO_DEPRECATE -D_WINSOCK_DEPRECATED_NO_WARNINGS) 
  SET(LINK_LIBS ${LINK_LIBS} litlua WS2_32 userenv Iphlpapi Psapi)
ENDIF(NOT MSVC_VERSION)

SET(EXECUTABLE_OUTPUT_PATH "${CMAKE_SOURCE_DIR}/bin/${CMAKE_BUILD_TYPE}/")
SET(LIBRARY_OUTPUT_PATH "${CMAKE_SOURCE_DIR}/lib/${CMAKE_BUILD_TYPE}/")

SET(LUA_PATH ${CMAKE_SOURCE_DIR}/lua-5.3.3/src/)
SET(LIT_PATH ${CMAKE_SOURCE_DIR}/litlua/)
LINK_DIRECTORIES(${LIBRARY_OUTPUT_PATH})
INCLUDE_DIRECTORIES(${LUA_PATH})
INCLUDE_DIRECTORIES(${LIT_PATH})
ADD_SUBDIRECTORY(litlua)
ADD_SUBDIRECTORY(test)
